--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-ye hai tum isme add krke dedo mai reeplace karlungi  <!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -948,6 +948,7 @@ ye hai tum isme add krke dedo mai reeplace karlungi  <!DOCTYPE html>
                 }, 1500);
             });
             
+           // Backend-connected feedback form
 document.getElementById('feedbackForm').addEventListener('submit', async function(e) {
     e.preventDefault();
 
